--- a/index.html
+++ b/index.html
@@ -1,94 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>frontend Task</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HNG HNG-TASK-1</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
-<style>
-    body{
-        font-family: arial, sans-serif;
-        background-color: #fff;
-        margin: 0;
-        padding: 0;
-    }
-    header{
-        background-color: #333;
-        color: #fff;
-        text-align: center;
-        padding: 10px;
-    }
-    .container{
-        max-width: 600px;
-        margin: 10px auto;
-        background-color: #fff;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    }
-    .data{
-        margin-bottom: 10px;
-    }
-    img{
-        max-width: 200px;
-        border-radius: 50px;
-    }
-    footer{
-        background-color: #333;
-        color: #fff;
-        text-align: center;
-        padding: 10px;
-    }
-    a{
-        text-decoration: none;
-        color: #fff;
-    }
-</style>
+
 <body>
-    <header>
-        personal Data showcase
-    </header>
-    <div class="container">
-        <div class="data" data-testid="slackUserName">
-        <label>slack Name:</label>
-        <span>zinne126</span>
-        </div>
-        <div class="data" data-testid="slackDisplayPicture">
-            <label>slack Display Picture:</label>
-            <img src="img/WhatsApp Image 2023-09-08 at 12.07.03 AM.jpeg" alt="zinne126">
-        </div>
-        <div class="data" data-testid="currentDayOfTheWeek">
-            <label>thursday:</label>
-            <span id="currentDay"></span>
-        </div>
-        <div class="data" data-testid="currentUTCTime">
-            <label>current UTC Time:</label>
-            <span id="currentUTC"></span>
-        </div>
-        <div class="data" data-testid="myTrack">
-            <label>Track:</label>
-            <span>frontend</span>
-        </div>
+  <main>
+    <div class="slack__display--flex">
+      <!-- Slack Display Picture -->
+      <div class="slack__display--profile">
+        <img class="slack__display--img" src="./img/WhatsApp Image 2023-09-08 at 12.07.03 AM.jpeg" alt="zinne126" data-testid="slackDisplayImage">
+      </div>
+      <!-- Slack Name -->
+      <h1 data-testid="slackUserName">zinne126</h1>
     </div>
-    <footer>
-        <div class="github-link" data-testid="githubURL">
-        <a href="https://github.com/zinne126">github Respository</a>
-        </div>
-    </footer>
+
+
+    <div class="slack__details--day">
+      <!-- Current Day of the Week -->
+      <p data-testid="currentDayOfTheWeek" id="day"></p>
+    </div>
+
+    <div class="slack__details--time">
+      <!-- Current UTC Time -->
+      <p data-testid="currentUTCTime" id="time"></p>
+    </div>
+
+    <div class="slack__details--track">
+      <!-- Track -->
+      <p data-testid="myTrack">Frontend Stage 1</p>
+    </div>
+
+    <div class="slack__details--url">
+      <!-- GitHub URL -->
+      <a href="https://github.com/zinne126" target="_blank" data-testid="githubURL">View Code</a>
+    </div>
+
+
+  </main>
+  <script src="./script.js"></script>
 </body>
 
-<script>
-    function updateDateTime() {
-        const daysOfWeek = ["sunday", "monday", "tuesday", "wednesday", "thursday", "friday", "saturday"];
-        const now = new Date();
-        const currentDay = daysOfWeek[now.getUTCDay()];
-        const currentUTCTime = now.toISOString().substr(11, 8);
-
-        document.querySelector('[data-testid="currentDayOfTheWeek"]').textContent = currentDay;
-        document.querySelector('[data-testid="currentUTCTime"]').textContent = currentUTCTime;
-
-        setTimeout(updateDateTime, 1000);
-
-    }
-
-    updateDateTime();
-</script>
 </html>
