--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="slack__details--url">
       <!-- GitHub URL -->
-      <a href="https://github.com/zinne126" target="_blank" data-testid="githubURL">View Code</a>
+      <a href="https://github.com/zinne126/zinne126.github.io" target="_blank" data-testid="githubURL">View Code</a>
     </div>
 
 
