--- a/index.html
+++ b/index.html
@@ -4,31 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HNG - Stage 1 Task</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
+  <title>Frontend Profile Task</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
 </head>
 
 <body>
-
-  <section>
-    <h1 data-testid="slackUserName">zinne126</h1>
-    <img src="./img/WhatsApp Image 2023-09-08 at 12.07.03 AM.jpeg" alt="zinne126" data-testid="slackDisplayImage" />
-  </section>
-
-  <div class="time">
-    <h4 data-testid="currentDayOfTheWeek">Current Day Of The Week: <span id="currentDay"></span></h4>
-    <h4 data-testid="currentUTCTime" class="utc">Current UTC: <span id="currentUTC"></span></h4>
-    <h4 data-testid="myTrack">Frontend Track</h4>
-  </div>
-
-  <div>
-    <p>Click <a href="https://github.com/zinne126/zinne126.github.io" data-testid="githubURL">here</a> to visit my github URL
-    </p>
-  </div>
-  <script type="module" src="./script.js"></script>
+  <nav>
+    <h1>Welcome to your Dashboard</h1>
+  </nav>
+  <div class="container"></div>
+  <img src="./img/WhatsApp Image 2023-09-08 at 12.07.03 AM.jpeg" alt="zinne126" data-testid="slackDisplayImage">
+  <p data-testid="slackUserName">
+  <h3>Slack Name: zinne126</h3>
+  </p>
+  <p data-testid="currentDayOfTheWeek" id="currentday"></p>
+  <p data-testid="currentUTCTime" id="currenttime"></p>
+  <p data-testid="myTrack">
+  <h3>Track: Frontend</h3>
+  </p>
+  <a href="https://github.com/zinne126/zinne126.github.io" target="_blank" data-testid="githubURL">Github Repository</a>
 </body>
 
 </html>
